# helicopter

./: .gitignore  CONSCIOUSNESS_DEMO_README.md  Cargo.toml  DATABASE_INTEGRATION_GUIDE.md  Dockerfile  FINAL_SYSTEM_READY.md  GIT_CLEANUP_GUIDE.md  IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  PUBLICATION_PANELS_GUIDE.md  README.md  RESULTS_GUIDE.md  SCOPE_IMPLEMENTATION_ROADMAP.md  SCOPE_IMPLEMENTATION_STATUS.md  SCOPE_TYPESCRIPT_COMPILER.md  START_INTEGRATION_TEST.md  VALIDATION_INDEX.md  VALIDATION_SUMMARY.md  clean_git_cache.bat  docker-compose.yml  env.example  publication_panels.py  pyproject.toml  remove_from_history.ps1  remove_large_files.ps1  requirements-dev.txt  requirements.txt  setup.py  test_consciousness_demo.py  test_helicopter_implementation.py  validation_experiments.py  validation_report.py
lifescience/: ANALYSIS_IMPROVEMENTS.md  APOLOGY_AND_FIX.md  COMPLETE_CHARTS_IMPLEMENTATION.md  GETTING_STARTED.md  PAPER_PROPOSALS.md  README.md  REVISED_PAPER_STRATEGY.md  __init__.py  config.py  demo_all_modules.py  demo_complete_helicopter.py  demo_fluorescence.py  demo_quick_test.py  demo_video.py  pyproject.toml  requirements.txt  results_template.md  setup.py
lifescience/src/: __init__.py  results.py
lifescience/src/electron/: __init__.py  analyzer.py  structures.py
lifescience/src/entropy/: __init__.py  coordinates.py  transformer.py
lifescience/src/flourescence/: __init__.py  metrics.py
lifescience/src/fluorescence/: analyzer.py
lifescience/src/gas/: __init__.py  analyzer.py  biological_analyzer.py  molecules.py
lifescience/src/meta/: __init__.py  extractor.py  structures.py
lifescience/src/video/: __init__.py  analyzer.py  tracking.py
lifescience/src/visualisation/: generate_all_figures.py  plot_comparative_summary.py  plot_fluorescence_panels.py  plot_statistical_analysis.py  plot_timeseries_detailed.py  plot_video_analysis_panels.py  plot_video_tracking_detailed.py  visualisation_setup.py
lifescience/src/visualisations/: plot_comparative_summary.py  plot_fluorescence_detailed.py  plot_fluorescence_overview.py  plot_video_tracking_detailed.py  plot_video_tracking_overview.py  run_all_visuaisations.py  visualisations_setup.py
maxwell/: .gitignore  ALGORITHM_IMPLEMENTATION_PROPOSAL.md  CHANGELOG.md  COMPLETE_FRAMEWORK_GUIDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FRAMEWORK_UPDATES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MULTI_MODAL_REVOLUTIONARY_ADVANTAGE.md  Makefile  PACKAGE_SUMMARY.md  QUICK_START.md  QUICK_START_MULTI_MODAL.md  README.md  README_IMPLEMENTATION.md  README_LIFE_SCIENCES_VALIDATION.md  S-ENTROPY_HCCC_INTEGRATION.md  TRANS_PLANCKIAN_CORRECTION.md  USING_EXISTING_MODULES.md  VALIDATION_QUICKSTART.md  VIRTUAL_IMAGING_GUIDE.md  config.yaml  demo_complete_framework.py  demo_dual_hccc.py  demo_hccc_vision.py  pyproject.toml  requirements.txt  setup.py  validate_life_sciences_multi_modal.py  visualize_npy_results.py
maxwell/docs/equations-of-state/: COMPLETE_VISUALIZATION_GUIDE.md  VALIDATION_README.md  VALIDATION_SUMMARY.md  detailed_paradox_panels.py  paradox_visualizations.py  partition-based-equations-of-state.tex  references.bib  test_validation.py  validation_experiments.py
maxwell/experimental_validation/: README.md  __init__.py  requirements.txt
maxwell/experimental_validation/dodecapartite_implementation/: modality_01_optical.py  sequential_exclusion.py
maxwell/experimental_validation/validation/: segmentation_metrics.py
maxwell/publication/hardware-based-computer-vision/: hardware-constrained-categorical-completion.tex
maxwell/publication/hardware-constrained-categorical-cv/: hardware-constrained-categorical-computer-vision.tex
maxwell/publication/multi-modal-virtual-microscopy/: MERGE_SUMMARY.md  PAPER_COMPLETE.md  dodecapartite-virtual-microscopy.tex  figures.tex  references.bib
maxwell/publication/quantupartite-virtual-microscopy/: PAPER_STRUCTURE.md
maxwell/scripts/: __init__.py  config_loader.py  process_image.py  run_benchmark.py  run_demo.py
maxwell/src/: __init__.py
maxwell/src/categorical/: completion.py  richness.py
maxwell/src/instruments/: __init__.py  acoustic.py  binding_affinity.py  capacitive.py  categorical_toxicity.py  display.py  magnetometer.py  network.py  oxygen_categorical_time.py
maxwell/src/maxwell/: demo_dual_hccc.py  simple_pixel_grid.py
maxwell/src/regions/: features.py
maxwell/src/validation/: metrics.py
maxwell/tests/: __init__.py  test_algorithm.py  test_bmd_state.py
pixel_maxwell_demon/: COMPLETE_FRAMEWORK_SUMMARY.md  COMPLETE_VALIDATION_SUITE.md  CRAZY_PANELS_SUMMARY.md  DEMONSTRATION_PANEL_README.md  FFMPEG_INSTALL.md  FIXES_APPLIED.md  GPS_TRIANGULATION_VALIDATES_LUNAR_IMAGING.md  INSTALL.md  LUNAR_PAPER_VALIDATION_COMPLETE.md  MOTION_PICTURE_VALIDATION.md  MULTI_MODAL_MOTION_PICTURE.md  NEW_SECTIONS_ADDED.md  PROJECT_STATUS.md  PUBLICATION_PANELS_README.md  QUICKSTART.md  README.md  RUN_ANALYSIS.md  SCRIPTS_FIXED.md  SESSION_SUMMARY.md  SPECIALIZED_VISUALIZATIONS_README.md  ULTIMATE_PROOF_SUMMARY.md  VALIDATION_COMPLETE.md  VALIDATION_EXPERIMENTS_README.md  calculate_lunar_dust_displacement.py  create_publication_panel_charts.py  demo_irreversible_playback.py  demo_virtual_imaging.py  generate_3d_volumetric_reconstruction.py  generate_eclipse_shadow_calculation.py  generate_lunar_demonstration_images.py  generate_spectral_zoom_video.py  infographic.py  install_and_test.py  pyproject.toml  remove_internal_refs.py  requirements.txt  run_demo.py  run_validate.py  run_visualize.py  setup.py  (+17 more)
pixel_maxwell_demon/docs/: PUBLICATION_STATUS.md  PUBLICATION_STRATEGY.md  REVOLUTIONARY_BREAKTHROUGH.md
pixel_maxwell_demon/docs/hardware-constrained-categorical-cv/: references.bib
pixel_maxwell_demon/docs/imaging-from-first-principles/: README.md  compile.bat  compile.sh  imaging-categorical-partitions.tex  references.bib
pixel_maxwell_demon/docs/information-catalysis/: README.md  information-catalysis-see-through-imaging.tex
pixel_maxwell_demon/lunar_paper_validation/: README.md
(+752 files in other folders)
