[package]
name = "helicopter"
version = "1.0.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Consciousness-Aware Computer Vision Framework with Gas Molecular Information Processing"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/helicopter"
keywords = ["computer-vision", "consciousness", "gas-molecular", "bmd-validation", "equilibrium"]
categories = ["computer-vision", "science", "algorithms"]
readme = "README.md"

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "consciousness_demo"
path = "src/bin/consciousness_demo.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gas_molecular_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false

[features]
default = ["consciousness-aware"]
consciousness-aware = []
bmd-validation = []
moon-landing = []
turbulence-syntax = []
