[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "helicopter-lifescience"
version = "0.1.0"
description = "Helicopter Life Science Modules - Advanced Computer Vision Framework for Biological Applications"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Kundai Mlilo", email = "kundai@fullscreen-triangle.com"}
]
maintainers = [
    {name = "Kundai Mlilo", email = "kundai@fullscreen-triangle.com"}
]
keywords = [
    "computer-vision", 
    "biology", 
    "microscopy", 
    "image-analysis", 
    "life-sciences",
    "fluorescence",
    "electron-microscopy",
    "cell-tracking",
    "bayesian-inference",
    "thermodynamics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]
all = [
    "helicopter-lifescience[dev,docs]"
]

[project.urls]
Homepage = "https://github.com/fullscreen-triangle/helicopter-lifescience"
Repository = "https://github.com/fullscreen-triangle/helicopter-lifescience"
Documentation = "https://helicopter-lifescience.readthedocs.io"
Changelog = "https://github.com/fullscreen-triangle/helicopter-lifescience/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/fullscreen-triangle/helicopter-lifescience/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["lifescience*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
lifescience = ["*.md", "*.txt", "*.yml", "*.yaml"]

# Black formatting configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy type checking configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["lifescience"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

