
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "maxwell"
version = "1.0.0"
description = "Hardware-Constrained Categorical Completion for Image Understanding"
readme = "README_IMPLEMENTATION.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kundai Farai Sachikonye", email = "research@s-entropy.org"}
]
keywords = ["computer-vision", "maxwell-demon", "bmd", "categorical-completion", "s-entropy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "networkx>=2.6.0",
    "pandas>=1.3.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "mypy>=0.910",
    "flake8>=3.9.0",
]
hardware = [
    "pyserial>=3.5",
    "sounddevice>=0.4.0",
    "screen-brightness-control>=0.20.0",
]

[project.scripts]
maxwell-demo = "scripts.run_demo:main"
maxwell-benchmark = "scripts.run_benchmark:main"
maxwell-process = "scripts.process_image:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
