[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-maxwell-demon"
version = "0.1.0"
description = "Dual-Membrane Computer Vision Framework with Pixel Maxwell Demons"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kundai Sachikonye"}
]
keywords = ["computer-vision", "maxwell-demon", "information-theory", "image-processing", "3d-reconstruction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "opencv-python>=4.5.0",
    "scipy>=1.6.0",
    "scikit-image>=0.18.0",
    "pillow>=8.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
]

[project.scripts]
pmd-visualize = "maxwell.cli:visualize_npy"
pmd-validate = "maxwell.cli:validate_life_sciences"
pmd-demo = "maxwell.cli:run_demo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

